# FHE-Applications

./: README.md
dev/CKKS-App/HELR/: CMakeLists.txt  README.md
dev/CKKS-App/LSTM/: .gitignore  CMakeLists.txt  README.md  convert_pt2bin.sh  curve_fit.py  fhe_inference.cpp  plaintext_inference.cpp  pt_to_bin.cpp
dev/CKKS-App/LSTM/train/: train_pytorch.py  trained_fc_bias.pt  trained_fc_weight.pt  trained_rnn_hh.pt  trained_rnn_ih.pt
dev/CKKS-App/ResNet20/: CMakeLists.txt  README.md
dev/CKKS-App/ResNet20/src/: FHEController.cpp  main.cpp
dev/CKKS-App/Sorting/: .gitignore  CMakeLists.txt  README.md
dev/CKKS-App/Sorting/src/: main.cpp
dev/CKKS-App/Sorting/src/plaintext/: sort.py
dev/TFHE-App/DeepCNN-X/: README.md  deepcnn-x.py
doc/: FHE-Application-Paper-reading-list.md
trace/: ResNet20_trace.txt
